[gd_scene load_steps=15 format=3 uid="uid://dwd6y6e61botn"]

[ext_resource type="Theme" uid="uid://bfmrdx6ah36lt" path="res://ui/ui_theme.tres" id="1"]
[ext_resource type="FontFile" uid="uid://cu56gylq7usm7" path="res://ui/fonts/Minimum.ttf" id="2"]
[ext_resource type="Shader" uid="uid://c4pt0ljhyev6h" path="res://ui/scroll.gdshader" id="3"]
[ext_resource type="Resource" uid="uid://cmpo574c33e4r" path="res://config/menu.tres" id="3_s6bll"]
[ext_resource type="Texture2D" uid="uid://dsdtq1sgpro7c" path="res://ui/tiled_hud.png" id="5"]
[ext_resource type="Script" uid="uid://c6khqjoyb02oj" path="res://scenes/unlockshop/UnlockShop.gd" id="7"]
[ext_resource type="PackedScene" uid="uid://bvgro5p43ir7r" path="res://scenes/home/ui/honey/honey_counter.tscn" id="7_s6bll"]
[ext_resource type="Texture2D" uid="uid://p7ybyhakw5kv" path="res://scenes/unlockshop/panel.png" id="8"]
[ext_resource type="PackedScene" uid="uid://g71xw0hneqtu" path="res://scenes/home/ui/button/SimpleButton.tscn" id="9"]
[ext_resource type="Texture2D" uid="uid://bunxtk64ph182" path="res://scenes/home/ui/controls/icons.png" id="9_3ouqi"]
[ext_resource type="AudioStream" uid="uid://cru22pp2chg81" path="res://scenes/unlockshop/buy.wav" id="9_eepkj"]

[sub_resource type="ShaderMaterial" id="5"]
shader = ExtResource("3")
shader_parameter/speed = Vector2(0, -0.3)

[sub_resource type="LabelSettings" id="LabelSettings_82sba"]
line_spacing = -4.0
font = ExtResource("2")
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qdh2"]
atlas = ExtResource("9_3ouqi")
region = Rect2(0, 0, 17, 17)

[node name="UnlockShop" type="Control" groups=["scene"]]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1")
script = ExtResource("7")
menu = ExtResource("3_s6bll")

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
texture_repeat = 2
material = SubResource("5")
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("5")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
show_behind_parent = true
texture_repeat = 2
layout_mode = 0
anchor_right = 1.0
offset_top = 15.0
offset_bottom = 31.0
pivot_offset = Vector2(-50, -53)
texture = ExtResource("8")
stretch_mode = 1

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 30.0
offset_right = 160.0
offset_bottom = 144.0
pivot_offset = Vector2(-50, -68)
color = Color(0.92549, 0.917647, 0.921569, 1)

[node name="HoneyCounter" parent="." instance=ExtResource("7_s6bll")]
layout_mode = 0
offset_left = 107.0
offset_top = 2.0
offset_right = 156.0
offset_bottom = 26.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -114.0
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 4

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="Unlockables" type="VBoxContainer" parent="VBoxContainer/MarginContainer2/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemDescription" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 5
label_settings = SubResource("LabelSettings_82sba")
autowrap_mode = 2
clip_text = true

[node name="BuyButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
text = "Buy"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="VBoxContainer/MarginContainer/HBoxContainer/BuyButton"]
stream = ExtResource("9_eepkj")

[node name="Back" parent="." instance=ExtResource("9")]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 19.0
offset_bottom = 19.0
toggle_mode = false

[node name="icon_on" parent="Back" index="1"]
texture = SubResource("AtlasTexture_7qdh2")

[connection signal="pressed" from="VBoxContainer/MarginContainer/HBoxContainer/BuyButton" to="." method="_on_BuyButton_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]

[editable path="Back"]
